# what-to-cook-today

./: .fuzz-coveragerc  .gitignore  PROJECT.md  README.md  REPORT.md  TASK.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci-sonraqube.yml
src/: __main__.py
src/api/: app.py
src/db/: database.py
src/models/: recipe.py
src/services/: api_service.py
src/ui/: app.py  pyproject.toml
tests/api/: test_app.py
tests/db/: test_database.py
tests/fuzzing/: test_api_app_fuzzing.py  test_api_service_fuzzing.py  test_database_fuzzing.py  test_recipe_fuzzing.py
tests/load_test/: locustfile.py
tests/models/: test_recipe.py
tests/services/: test_api_service.py
tests/ui/: test_app_ui.py
